# AI-CLI

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  PROJECT_ITERATION_PLAN_v2.md  README.md  TDQS_DEVELOPMENT_PLAN.md  glama.json  pyproject.toml  server.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: docs-governance.instructions.md  python-tests.instructions.md
.github/scripts/: run-ci-wsl.ps1  update_golden.py  wsl-ci.sh
.github/workflows/: ci.yml  publish.yml  stress-test.yml
docs/: AGENTUTILS.md  COMPATIBILITY.md  GNU_COMPATIBILITY_AUDIT.md  GPTCodex-vs-DeepSeekCopilot-分析日志.md  QUICKSTART.md  README.md  TESTING.md  USAGE.zh-CN.en.md
docs/agent-guides/: DOC_GOVERNANCE_RULES.md  FACT_PROPAGATION_MATRIX.md
docs/analysis/: DeepSeek-2026-04-30-安全加固与一致性修复-开发日志.md  GPTCodex-vs-DeepSeekCopilot-分析日志.md  GPTCodex-代码库变更日志.md
docs/architecture/: DOC_GOVERNANCE_RULES.md  FACT_PROPAGATION_MATRIX.md
docs/audits/: GNU_COMPATIBILITY_AUDIT.md
docs/development/: COMMAND_SPEC_PILOT.md  COMMAND_TEST_MATRIX.md  CONCEPTS.md  DEVELOPMENT_AUDIT_PLAN.md  TESTING.md  WSL_CI.md
docs/development/adr/: INDEX.md
docs/guides/: PRODUCTION_SECURITY.md  USAGE.zh-CN.en.md
docs/reference/: AGENTUTILS.md  SECURITY_MODEL.md
docs/reports/: version_status_governance_fix.md
docs/reports/project-governance/: 2026-04-30-project-structure-and-docs-governance-report.md  2026-05-01-architecture-analysis-and-roadmap.md  2026-05-02-comprehensive-refactoring-plan.md  2026-05-05-external-audit-readiness.md  2026-05-05-stabilization-p0-baseline-audit.md
docs/reports/test/: 2026-04-30-agentutils-v0.1.0-test-report.md
docs/status/: CURRENT_STATUS.md
docs/test-reports/: 2026-04-30-agentutils-v0.1.0-test-report.md
examples/: AGENT_TASKS.md  langchain_wrapper.py
project/: AGENTS.md
project/docs/: COMMUNITY_LAUNCH_COPY.md  README.md
project/docs/agent-guides/: CLAUDE.md  DOC_GOVERNANCE_RULES.md  FACT_PROPAGATION_MATRIX.md
project/docs/analysis/: DeepSeek-2026-04-30-安全加固与一致性修复-开发日志.md  GPTCodex-vs-DeepSeekCopilot-分析日志.md  GPTCodex-代码库变更日志.md
project/docs/audits/: GNU_COMPATIBILITY_AUDIT.md
project/docs/development/: COMMAND_TEST_MATRIX.md  CONCEPTS.md  DEVELOPMENT_AUDIT_PLAN.md  RELEASE_GOVERNANCE.md  TESTING.md  WSL_CI.md
project/docs/guides/: INTEGRATION_AI_IDE.md  INTEGRATION_CLAUDE_DESKTOP.md  PRODUCTION_SECURITY.md  USAGE.zh-CN.en.md
project/docs/reference/: AGENTUTILS.md  SECURITY_MODEL.md
project/docs/reports/: version_status_governance_fix.md
project/docs/status/: CURRENT_STATUS.md
project/tests/: support.py  test_agentutils.py  test_aicoreutils.py  test_ci_config.py  test_core_and_extras.py  test_docs_bilingual.py  test_docs_governance.py  test_error_exit_codes.py  test_even_more_agent_commands.py  test_execution_and_page_commands.py  test_gnu_differential.py  test_golden_outputs.py  test_mcp_security.py  test_mcp_server.py  test_mcp_server_unit.py  test_sandbox_escape_hardening.py  test_system_alias_and_encoding_commands.py  test_unit_core.py  test_unit_protocol.py  test_unit_sandbox_path.py
project/tests/golden/: base64_hello.json  cp_dryrun.json  seq_1_2_5.json  stat_readme.json  wc_counts.json
scripts/: audit_command_matrix.py  audit_command_specs.py  audit_supply_chain.py  bump_version.py  check_metadata_consistency.py  check_release_version.py  generate_completions.py  generate_status.py  release_gate.py  run-ci-wsl.ps1  sync_metadata.py  update_golden.py  wsl-ci.sh
src/agentutils/: __init__.py  __main__.py  async_interface.py  catalog.py  cli.py  fs_commands.py  parser.py  plugins.py  protocol.py  registry.py  system_commands.py  text_commands.py
src/agentutils/core/: __init__.py  config.py  constants.py  envelope.py  exceptions.py  exit_codes.py  stream.py  (+3 more)
src/aicoreutils/: __init__.py  __main__.py  async_interface.py  catalog.py  command_specs.py  mcp_server.py  plugins.py  tool_schema.py
tests/: conftest.py  support.py  test_agent_call_flow.py  test_agentutils.py  test_ci_config.py  test_cli_black_box.py  test_concurrency.py  test_core_and_extras.py  test_docs_bilingual.py  test_docs_governance.py  test_error_recovery.py  test_execution_and_page_commands.py  test_file_admin_commands.py  test_gnu_differential.py  test_golden_outputs.py  test_large_input.py  test_mcp_server.py  test_more_agent_commands.py  test_oop_command_base.py  test_oop_compat.py  test_oop_pilots.py  test_output_encoding.py  test_project_consistency.py  test_property_based_cli.py  test_remaining_coreutils_commands.py  test_sandbox_and_side_effects.py  test_sandbox_escape_hardening.py  test_text_encoding.py  test_unit_command_specs.py  test_unit_commands_fs.py  test_unit_commands_system.py  test_unit_commands_text.py  test_unit_core.py  test_unit_protocol.py  test_unit_sandbox_path.py  test_unit_utils_path.py  test_version_consistency.py
tests/golden/: base64_hello.json  cp_dryrun.json  seq_1_2_5.json  stat_readme.json  wc_counts.json
tests/stress/: __init__.py  command_fuzzer.py  mcp_stress_client.py  metrics.py  stress_runner.py
(+55 files in other folders)
