[project]
name = "agentutils"
version = "0.1.0"
description = "Agent-friendly CLI layer inspired by GNU Coreutils."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
agentutils = "agentutils.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
