[project]
name = "aicoreutils"
version = "1.1.1"
description = "Agent-friendly CLI layer inspired by GNU Coreutils."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = []
authors = [
    {name = "caseSHY", email = "caseSHY@users.noreply.github.com"},
]
keywords = [
    "cli",
    "coreutils",
    "agent",
    "llm",
    "json",
    "ai",
    "tool-calling",
    "mcp",
    "sandbox",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/caseSHY/AI-CLI"
Repository = "https://github.com/caseSHY/AI-CLI"
Issues = "https://github.com/caseSHY/AI-CLI/issues"

[project.optional-dependencies]
test = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
dev = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
aicoreutils = "aicoreutils.parser:main"
aicoreutils-mcp = "aicoreutils.mcp_server:main"
agentutils = "aicoreutils.parser:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["project/tests"]
cache_dir = ".cache/pytest_cache"

[tool.ruff]
cache-dir = ".cache/ruff_cache"
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"project/tests/**" = ["N802", "N803", "N806"]
"src/aicoreutils/**" = ["N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
cache_dir = ".cache/mypy_cache"
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["project/tests/"]
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.coverage.run]
data_file = ".cache/coverage/.coverage"
source = ["src/aicoreutils"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def __repr__",
]
